# octet

./: .gitignore  .ocamlformat  Makefile  README.md  dune-project  input.txt  input2.txt  input3.txt  requirements
config/: colors.json  syntax.json
data/: _temp.clipboard  input3.txt  input4.txt
lib/: dune
src/: authors.ml  authors.mli  buffermanager.ml  buffermanager.mli  bytebuffer.ml  bytebuffer.mli  dune  filebuffer.ml  filebuffer.mli  gapbuffer.ml  gapbuffer.mli  obuffer.ml  obuffer.mli  orender.ml  orender.mli  render.ml  stringbuffer.ml  stringbuffer.mli  util.ml
src/gapbuffer/: gapbuffer.ml  gapbuffer.mli
test/: dune  main.ml  octet.ml  rendering_tests.json  test_input_1.txt  test_input_2.txt
