(library
 (name util)
 (modules util))

(library
 (name obuffer)
 (modules obuffer)
 (libraries notty notty.unix util))

(library
 (name gapbuffer)
 (modules gapbuffer)
 (libraries util obuffer)
 (instrumentation
  (backend bisect_ppx)))

(library
 (name bytebuffer)
 (modules bytebuffer)
 (libraries util obuffer)
 (instrumentation
  (backend bisect_ppx)))

(library
 (name orender)
 (modules orender)
 (libraries notty notty.unix obuffer))

(library
 (name buffermanager)
 (modules buffermanager)
 (libraries notty notty.unix obuffer))
