(library
 (name util)
 (modules util))

(library
 (name obuffer)
 (modules obuffer)
 (libraries notty notty.unix util orender))

(library
 (name orender)
 (modules orender)
 (libraries notty notty.unix))

(library
 (name buffermanager)
 (modules buffermanager)
 (libraries notty notty.unix obuffer))
